2009-05-07  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Changed formatting of class tx_ncstaticfilecache and SQL file (non-functional changes)
	* Set version to 2.4.0-dev
	* Set version to 3.0.0-dev
	* Cleanup: Added protected/public definitions and set min. requirement to TYPO3 4.2.0
	* Cleanup: Removed superfluous class for debug output and integrated it to regular class
	* Cleanup: Removed CLI cleaner for elderly TYPO3 releases (< 4.1)
	* Fixed bug: Fixed some hanging record sets
	* Fixed bug: Info module does not work anymore due to calls to protected methods/variables
	* Added feature: Store original URI of request and possibility to recreate the URI by typoLink
	* Added feature #2598: Keep static cache files even if the cache gets flushed by TYPO3
	* Fixed bug: Show generation signature only when the request is served by static cache

2008-02-22  Michiel Roos  <michiel@netcreators.com>

	* Added Changelog ;-)
	* Removed version_compare() from insertPageIncache()
	* Rename modfunc1 to infomodule