@@ -11,6 +11,7 @@
 	* Added feature: Store original URI of request and possibility to recreate the URI by typoLink
 	* Added feature #2598: Keep static cache files even if the cache gets flushed by TYPO3
 	* Fixed bug: Show generation signature only when the request is served by static cache
+	* Added feature: New hook 'createFile_processContent' to modify content before being written to cached file
 
 2008-02-22  Michiel Roos  <michiel@netcreators.com>
 
